# NextJS_Go_Tauri

./: .gitignore  package.json
backend/: go.mod  main.go
frontend/: package.json
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
